env_config/tests/ui/env_config_attribute_named_value_not_string_literal.rs
use env_config::{env_config, EnvConfig};

#[env_config(prefix = 123)]
#[derive(EnvConfig)]
struct MyLovelyConfig {
    something: bool,
}

fn main() {}
